@@ -1,5 +1,6 @@
 UNRELEASED CHANGES:
 
+* Add Danish krone currency
 * Add Czech translation
 * Fix https issue on password reset
 
